--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
-# Nuxt dev/build outputs
-.output
-.data
-.nuxt
-.nitro
-.cache
-dist
-
-# Node dependencies
 node_modules
-
-# Logs
-logs
 *.log
-
-# Misc
-.DS_Store
-.fleet
-.idea
-
-# Local env files
+.nuxt
+nuxt.d.ts
+.output
 .env
-.env.*
-!.env.example
